Member link added and actions alignment issue fixed in card dockmodal.

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -1937,3 +1937,6 @@ footer, header {
 .label-present{
 	background-color: #f3c60e;
 }
+.even-action{
+	width: 115px;
+}
